--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,13 @@
-<section class="page-header">
-  <h1 class="project-name">Reprowd</h1>
-  <h2 class="project-tagline">Crowdsourced Data Processing Made Easy</h2>
-  <a href="https://github.com/sfu-db/reprowd" class="btn">View on GitHub</a>
-  <a href="https://github.com/sfu-db/reprowd/zipball/master" class="btn">Download .zip</a>
-  <a href="https://github.com/sfu-db/reprowd/tarball/master" class="btn">Download .tar.gz</a>
-</section>
+<div id="container">
+  <div class="inner">
+
+    <header>
+      <h1>Reprowd</h1>
+      <h2>Crowdsourced Data Processing Made Reproducible</h2>
+    </header>
+
+    <section id="downloads" class="clearfix">
+      <a href="https://github.com/sfu-db/reprowd/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+      <a href="https://github.com/sfu-db/reprowd/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+      <a href="https://github.com/sfu-db/reprowd" id="view-on-github" class="button"><span>View on GitHub</span></a>
+    </section>
