--- a/_source/_includes/header.html
+++ b/_source/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="inner">
 
     <header>
-      <h1>Reprowd</h1>
+        <h1><div id="title"><a href='http://sfu-db.github.io/reprowd/'>Reprowd</a></div></h1>
       <h2>Crowdsourced Data Processing Made Reproducible</h2>
     </header>
 
